--- a/Feedback/NHS111.Business.Feedback.Api/Web.config
+++ b/Feedback/NHS111.Business.Feedback.Api/Web.config
@@ -8,6 +8,7 @@
     <section name="basicAuth" type="Devbridge.BasicAuthentication.Configuration.BasicAuthenticationConfigurationSection" />
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -22,12 +23,15 @@
     <httpRuntime targetFramework="4.5" />
     <globalization culture="en-GB" />
     <customErrors mode="Off" />
+    <httpModules>
+      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
+    </httpModules>
   </system.web>
   <appSettings file="C:\Configurations\nhs111-shared-resources\shared.debug.config">
     <add key="SqliteDbConnectionString" value="data source=L:\Work\111 Online\nhs111-feedback\Feedback\NHS111.Domain.Feedback\FeedbackDb; Version=3; Pooling=True; Max Pool Size=100;" />
     <add key="login_credential_user" value="madeupUser" />
     <add key="login_credential_password" value="madeupPassword" />
-    <add key ="DeleteFeedbackFeature" value="false" />
+    <add key="DeleteFeedbackFeature" value="false" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -62,7 +66,10 @@
     </handlers>
     <modules>
       <add name="MyBasicAuthenticationModule" type="NHS111.Business.Feedback.Api.Authentication.BasicAuthenticationModule" />
+      <remove name="ApplicationInsightsWebTracking" />
+      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
+    <validation validateIntegratedModeConfiguration="false" />
   </system.webServer>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
@@ -81,4 +88,15 @@
       <add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6" description=".NET Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6" />
     <remove invariant="System.Data.SQLite" /><add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" /></DbProviderFactories>
   </system.data>
+  <log4net>
+    <root>
+      <level value="ALL" />
+      <appender-ref ref="aiAppender" />
+    </root>
+    <appender name="aiAppender" type="Microsoft.ApplicationInsights.Log4NetAppender.ApplicationInsightsAppender, Microsoft.ApplicationInsights.Log4NetAppender">
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%message%newline" />
+      </layout>
+    </appender>
+  </log4net>
 </configuration>
