--- a/Feedback/NHS111.Business.Feedback.Api.Functional.Tests/App.config
+++ b/Feedback/NHS111.Business.Feedback.Api.Functional.Tests/App.config
@@ -3,8 +3,8 @@
   <appSettings file="C:\Configurations\nhs111-shared-resources\shared.debug.config">
     <add key="FeedbackUrl" value="http://localhost:50139/" />
     <add key="FeedbackAuthorization" value="Basic Temp" />
-    <add key="madeUpUser" value="digital111_ws"/>
-    <add key="madeUpPassword" value="Valtech111"/>
+    <add key="login_credential_user" value="madeupUser"/>
+    <add key="login_credential_password" value="madeupPassword"/>
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
