--- a/Feedback/NHS111.Business.Feedback.Api/NHS111.Business.Feedback.Api.csproj
+++ b/Feedback/NHS111.Business.Feedback.Api/NHS111.Business.Feedback.Api.csproj
@@ -133,13 +133,13 @@
       <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="NHS111.IoC, Version=1.0.0.26, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\NHS111.IoC.1.0.0.26\lib\net451\NHS111.IoC.dll</HintPath>
+    <Reference Include="NHS111.IoC, Version=1.0.0.31, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\NHS111.IoC.1.0.0.31\lib\net451\NHS111.IoC.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="NHS111.Utils, Version=1.0.0.24, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\NHS111.Utils.1.0.0.24\lib\net451\NHS111.Utils.dll</HintPath>
+    <Reference Include="NHS111.Utils, Version=1.0.0.36, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\NHS111.Utils.1.0.0.36\lib\net451\NHS111.Utils.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="StackExchange.Redis, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\StackExchange.Redis.1.1.603\lib\net45\StackExchange.Redis.dll</HintPath>
