--- a/Feedback/NHS111.Domain.Feedback.Unit.Tests/NHS111.Domain.Feedback.Unit.Tests.csproj
+++ b/Feedback/NHS111.Domain.Feedback.Unit.Tests/NHS111.Domain.Feedback.Unit.Tests.csproj
@@ -63,8 +63,9 @@
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="NHS111.Utils">
-      <HintPath>..\packages\NHS111.Utils.1.0.0.24\lib\net451\NHS111.Utils.dll</HintPath>
+    <Reference Include="NHS111.Utils, Version=1.0.0.36, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\NHS111.Utils.1.0.0.36\lib\net451\NHS111.Utils.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.3.4.1\lib\net45\nunit.framework.dll</HintPath>
