--- a/Feedback/NHS111.Business.Feedback.Api/NHS111.Business.Feedback.Api.csproj
+++ b/Feedback/NHS111.Business.Feedback.Api/NHS111.Business.Feedback.Api.csproj
@@ -260,7 +260,7 @@
     </Content>
     <Content Include="Service References\Application Insights\ConnectedService.json" />
     <Content Include="Dockerfile" />
-    <Content Include="replace_appsettings.ps1" />
+    <Content Include="start.ps1" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
