--- a/Feedback/NHS111.Business.Feedback.Api/NHS111.Business.Feedback.Api.csproj
+++ b/Feedback/NHS111.Business.Feedback.Api/NHS111.Business.Feedback.Api.csproj
@@ -261,6 +261,7 @@
     <Content Include="Service References\Application Insights\ConnectedService.json" />
     <Content Include="Dockerfile" />
     <Content Include="start.ps1" />
+    <Content Include=".dockerignore" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
