--- a/Feedback/NHS111.Business.Feedback.Api/Dockerfile
+++ b/Feedback/NHS111.Business.Feedback.Api/Dockerfile
@@ -7,4 +7,5 @@ COPY ./obj/octopacked .
 COPY ./start.ps1 .
 
 RUN Set-WebBinding 'Default Web Site' -BindingInformation "*:80:" -PropertyName "Port" -Value "87"
-CMD powershell ./start.ps1
+
+ENTRYPOINT powershell ./start.ps1
