--- a/Feedback/NHS111.Business.Feedback.Api/Web.config
+++ b/Feedback/NHS111.Business.Feedback.Api/Web.config
@@ -103,13 +103,24 @@
   </system.data>
   <log4net>
     <root>
-      <level value="ALL" />
-      <appender-ref ref="aiAppender" />
+      <level value="ALL"/>
+      <appender-ref ref="LogFileAppender"/>
     </root>
-    <appender name="aiAppender" type="Microsoft.ApplicationInsights.Log4NetAppender.ApplicationInsightsAppender, Microsoft.ApplicationInsights.Log4NetAppender">
+    <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
+      <param name="File" value="..\..\LogFiles\Log4Net\Log4Net.log"/>
+      <param name="AppendToFile" value="true"/>
+      <rollingStyle value="Size"/>
+      <datePattern value="yyyyMMdd" />
+      <maxSizeRollBackups value="10" />
+      <maximumFileSize value="10000KB" />
+      <staticLogFileName value="true" />
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%message%newline" />
+        <conversionPattern value="%-5level %date{dd-MM-yyyy HH:mm:ss} %logger [%thread] - %message %exception%newline" />
       </layout>
+      <filter type="log4net.Filter.LevelRangeFilter">
+        <levelMin value="ERROR"/>
+        <levelMax value="FATAL"/>
+      </filter>
     </appender>
   </log4net>
 </configuration>
